--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "firebase": "^10.5.0",
