--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.32.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
