--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "@tanstack/react-query": "^5.32.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
@@ -28,7 +30,8 @@
     "react-toastify": "^9.1.3",
     "scroll-carousel-react": "^1.0.0",
     "slick-carousel": "^1.8.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
