installed react-range-slider-input, modified siddebar and menuItems, created Searcher component and added search functionality to View Proudcts page for both TabPC and mobile views, modified DashboardLayout component, made the ServiceBooking component responsive, changed rating min value to 1 in AddProduct component, deleted unecessry files

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^4.11.0",
+    "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
